--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
-body, html{
+body{
+    background-image: url(/img/images/bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
     max-width: 990px;
-    padding: auto;
-    position: relative;
-}
-#top{
-    background-image: url(/img/images/bg-top.jpg);
-    background-size: cover;
+    height: 3781px
+
 }
 #top .image img{
-    width: 200px;
+    width: 350px;
     height: auto;
+    position: absolute;
+    align-items: center;
+
 }
