--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     margin: 0 auto;
 }
 #bg{
-    background-image: url(/img/images/bg.jpg);
+    background-image: url(/img/images/bg2.jpg);
     background-repeat: no-repeat;
     background-position: center;
     width: 990px;
