--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body{
 }
 .button{
     height: 250px;
-    background-image: url(/img/bg-button.png);
+    background-image: url(../img/bg-button.png);
     background-position: center;
     display: flex;
     justify-content: space-evenly;
@@ -89,7 +89,7 @@ position: relative;
     margin-top: 100px;
 }
 .kare-image{
-    background-image: url(/img/魚介カレー.jpg);
+    background-image: url(../img/魚介カレー.jpg);
     background-size: 585px 400px;
     background-position: 385px;
 }
@@ -116,7 +116,7 @@ position: relative;
     margin-top: 100px;
 }
 .ramen-image{
-    background-image: url(/img/牛タンラーメン.jpg);
+    background-image: url(../img/牛タンラーメン.jpg);
     background-size: 870px 600px;
     background-position-x: 620px;
     background-position-y: 540px;
@@ -144,7 +144,7 @@ position: relative;
     margin-top: 100px;
 }
 .mabushi-image{
-    background-image: url(/img/ひつまぶし.jpg);
+    background-image: url(../img/ひつまぶし.jpg);
     background-size: 700px 450px;
     background-position-x: 390px;
     background-position-y: 400px;
@@ -164,7 +164,7 @@ position: relative;
 }
 .akses{
     height: 314px;
-    background-image: url(/img/akses.png);
+    background-image: url(../img/akses.png);
     background-repeat: no-repeat;
     background-position: center;
     background-position-y: 50px;
